--- a/PizzaRun/src/main/res/layout/activity_registro.xml
+++ b/PizzaRun/src/main/res/layout/activity_registro.xml
@@ -8,15 +8,6 @@
     android:orientation="vertical"
     android:baselineAligned="false">
 
- <TextView
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:fontFamily="casual"
-     android:text="Registrarse"
-     android:textAlignment="center"
-     android:textSize="24sp"
-     android:textStyle="bold" />
-
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
@@ -63,8 +54,8 @@
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
-       android:text="Usuario:"
        android:fontFamily="casual"
+       android:text="Usuario:"
        android:textSize="20sp" />
 
    <EditText
@@ -116,6 +107,7 @@
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPassword"
+       android:maxLength="16"
        android:singleLine="true" />
 
    <TextView
@@ -136,6 +128,7 @@
        android:layout_marginRight="20sp"
        android:fontFamily="casual"
        android:inputType="phone"
+       android:maxLength="10"
        android:singleLine="true"
        android:textSize="20sp" />
 
@@ -146,13 +139,22 @@
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
-       android:fontFamily="casual"
        android:background="@android:color/holo_red_light"
        android:elevation="0dp"
+       android:fontFamily="casual"
        android:text="Crear Cuenta"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />
   </LinearLayout>
  </ScrollView>
+
+ <TextView
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:fontFamily="casual"
+     android:text="Registrarse"
+     android:textAlignment="center"
+     android:textSize="24sp"
+     android:textStyle="bold" />
 
 </LinearLayout>
