primeras fases beta y correciones

--- a/PizzaRun/src/main/res/layout/fragment_tus_pedidos.xml
+++ b/PizzaRun/src/main/res/layout/fragment_tus_pedidos.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,14 @@
         android:layout_height="match_parent"
         android:text="Aquí va lo de Pedidos." />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/realizar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="31dp"
+        android:layout_marginStart="138dp"
+        android:text="Ordenar" />
+
+</RelativeLayout>
