--- a/PizzaRun/src/main/res/layout/fragment_tus_favoritos.xml
+++ b/PizzaRun/src/main/res/layout/fragment_tus_favoritos.xml
@@ -1,13 +1,59 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.ezegale.pizzaruneable.TusFavoritos">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Aquí va lo de Favoritos." />
 
-</FrameLayout>
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="73dp"
+        android:src="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView15"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@+id/imageView15"
+        android:text="Pizzeria PizzaRun" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/imageView15"
+        android:layout_marginTop="18dp"
+        android:text="Aqui estan las pizzerias en las que mas ordenas" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/imageView15"
+        android:layout_below="@+id/imageView15"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/moto" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView16"
+        android:layout_alignStart="@+id/textView10"
+        android:layout_marginBottom="21dp"
+        android:text="Pizzeria El Elmo" />
+
+
+</RelativeLayout>
