--- a/PizzaRun/src/main/res/layout/fragment_tus_pedidos.xml
+++ b/PizzaRun/src/main/res/layout/fragment_tus_pedidos.xml
@@ -1,14 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.ezegale.pizzaruneable.TusPedidos">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Aquí va lo de Pedidos." />
 
     <Button
         android:id="@+id/realizar"
@@ -18,6 +15,52 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="31dp"
         android:layout_marginStart="138dp"
-        android:text="Ordenar" />
+        android:text="ReOrdenar" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="En este apartado puedes ver el historial de tus compras" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textView7"
+        android:layout_below="@+id/textView7"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/pizza" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView13"
+        android:layout_marginStart="61dp"
+        android:layout_toEndOf="@+id/imageView13"
+        android:text="Pizza de peperoni Tamaño: Extra Grande Local:BomberosTj" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageView13"
+        android:layout_below="@+id/imageView13"
+        android:layout_marginTop="46dp"
+        android:src="@drawable/pizza" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textView8"
+        android:layout_alignTop="@+id/imageView14"
+        android:text="Pizza Mexicana Tamaño:personal Local:Pizzas El Elmo" />
+
 
 </RelativeLayout>
